# hub-codegen

./: .dockerignore  .gitignore  2026-02-16-research-how-to-build-an-activation-we-want-to-bu.txt  CACHE_CONTRACTS.md  Cargo.toml  Dockerfile  FINAL_REPORT.md  INCREMENTAL_CODEGEN.md  README.docker.md  README.md  REAL_BACKEND_TEST_RESULTS.md  RUST_CODEGEN_SUMMARY.md  docker-compose.yml  live-graph.tickets.md  prism.tickets.md
.hyperforge/: config.toml
docs/architecture/: 16677410982060469503_rust_hierarchical_modules.md  16677426298854269695_rust_implementation.md  16677426370165267711_rust_examples.md  16677426447718789631_rust_codegen.md  16679314737030628607_ir-codegen-chain.md  16679517135570018559_multi-hub-transport-envelope.md  16679536519907867647_plexus-call-streaming.md  caching-and-merge.md  cli-and-pipeline.md  ir-data-model.md  overview.md  rust-generator-and-testing.md  typescript-generator.md
examples/: compare_configs.rs  generate_from_config.rs
scripts/: README.md  start-substrate.sh  test-cache.sh  test-pipeline.sh  update-client.sh  update-rust-client-v2.sh  update-rust-client.sh  wait-for-synapse.sh
src/: cache.rs  credential_surface.rs  deprecation.rs  hash.rs  ir.rs  lib.rs  main.rs  merge.rs
src/generator/: mod.rs  (+6 more)
tests/: CACHE_TEST_HARNESS.md  README.md  SUMMARY.md  ca2_ts_auth_runtime_test.rs  cache_invalidation_test.rs  configurable_backend_test.rs  ir7_deprecation_test.rs  ir9_dynamic_child_test.rs  r4_credential_surface_test.rs  req7_typed_errors_test.rs  req9_jsdoc_test.rs  rust_codegen_smoke_test.rs  typescript_codegen_test.rs
(+26 files in other folders)
