[package]
name = "plexus-codegen-typescript"
version = "0.1.0"
edition = "2021"
description = "TypeScript client generator for Plexus RPC"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
heck = "0.5"

[dev-dependencies]
pretty_assertions = "1.4"

[[bin]]
name = "hub-codegen"
path = "src/main.rs"

[lib]
name = "hub_codegen"
path = "src/lib.rs"
