[package]
name = "hub-codegen"
version = "0.4.1"
edition = "2021"
license = "AGPL-3.0-only"
description = "Multi-language code generator for Hub plugins from Synapse IR"

[features]
default = ["typescript", "rust"]
typescript = []
rust = []
all = ["typescript", "rust"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
heck = "0.5"
thiserror = "1.0"
sha2 = "0.10"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.8"

[[bin]]
name = "hub-codegen"
path = "src/main.rs"

[lib]
name = "hub_codegen"
path = "src/lib.rs"
